création du menu sur la version mobile

--- a/public/index.html
+++ b/public/index.html
@@ -35,6 +35,7 @@
 
       <nav>
         <ul class="nav">
+          <i class="fas fa-times" id="crossIcon"></i>
           <li>
             <a class="nav--item"><span class="nav--item-nb">1</span> Home</a>
           </li>
@@ -50,6 +51,20 @@
             <a class="nav--item"><span class="nav--item-nb">4</span> Contact</a>
           </li>
         </ul>
+        <div class="nav--links">
+          <a
+            href="https://www.linkedin.com/in/lucas-tamaya-41a09621b/"
+            target="_blank"
+          >
+            <i class="fab fa-linkedin"></i
+          ></a>
+          <a href="https://github.com/LucasTamaya" target="_blank">
+            <i class="fab fa-github"></i
+          ></a>
+          <a href="https://5euros.com/profil/lucas-tamaya" target="_blank">
+            <i class="fas fa-laptop-code"></i>
+          </a>
+        </div>
       </nav>
 
       <i class="fas fa-bars" id="hamburgerMenu"></i>
@@ -458,8 +473,8 @@
               <i class="fab fa-github"></i
             ></a>
             <a href="https://5euros.com/profil/lucas-tamaya" target="_blank">
-              <i class="fas fa-briefcase"></i
-            ></a>
+              <i class="fas fa-laptop-code"></i>
+            </a>
           </div>
         </div>
       </footer>
@@ -479,8 +494,8 @@
         ></a>
         <a href="https://5euros.com/profil/lucas-tamaya" target="_blank">
           <div class="pulse"></div>
-          <i class="fas fa-briefcase"></i
-        ></a>
+          <i class="fas fa-laptop-code"></i>
+        </a>
         <div class="contact--line"></div>
       </div>
 
@@ -490,17 +505,20 @@
         <div class="contact--line"></div>
       </div>
     </main>
+    <!-- Scroll Reveal JS -->
+    <script src="./src/js/scrollReveal.js"></script>
+
     <!-- Scroll animation -->
     <script src="src/js/smoothScroll.js"></script>
-
-    <!-- Control form -->
-    <script src="src/js/controlForm.js"></script>
 
     <!-- Swiper JS -->
     <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="./src/js/swiper.js"></script>
 
-    <!-- Scroll Reveal JS -->
-    <script src="./src/js/scrollReveal.js"></script>
+    <!-- Control form -->
+    <script src="src/js/controlForm.js"></script>
+
+    <!-- Index JS -->
+    <script src="src/js/index.js"></script>
   </body>
 </html>
