résolution du bug au niveau du z-index pour la section projets

--- a/public/index.html
+++ b/public/index.html
@@ -144,7 +144,7 @@
 
       <!-- Section Projets -->
       <section>
-        <div class="mainContainer" id="projectsSection">
+        <div class="mainContainer">
           <div class="projects">
             <h2 class="section--title"><span>03.</span> Projets</h2>
             <div class="swiper mySwiper">
@@ -581,8 +581,5 @@
 
     <!-- Index JS -->
     <script src="src/js/index.js"></script>
-
-    <!-- Logo loading on scroll -->
-    <script src="src/js/logoLoading.js"></script>
   </body>
 </html>
