rectification de bugs au niveau du z-index de la section projets + changement de la taille de la police en version mobile

--- a/public/index.html
+++ b/public/index.html
@@ -101,6 +101,7 @@
             <div class="about--info">
               <h2 class="section--title"><span>02.</span> About</h2>
               <div class="about--top">
+                <!-- Version mobile -->
                 <div class="about--img-sm"></div>
                 <a
                   href="src/utils/dev-web-ifr.pdf"
@@ -108,6 +109,7 @@
                   class="btn--cta sm"
                   >Télécharger mon CV</a
                 >
+                <!-- Fin Version mobile -->
               </div>
               <p class="about--info-para">
                 Je pratique l'informatique depuis le lycée, mais je me suis
@@ -143,7 +145,7 @@
       </section>
 
       <!-- Section Projets -->
-      <section>
+      <section id="projectsSection">
         <div class="mainContainer">
           <div class="projects">
             <h2 class="section--title"><span>03.</span> Projets</h2>
