ajout du projet nextfoodapp

--- a/public/index.html
+++ b/public/index.html
@@ -2,16 +2,30 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
     <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0,
     maximum-scale=1.0,user-scalable=0"
     />
-    <link rel="icon" type="image/x-icon" href="/public/src/img/favicon.ico" />
+    <link
+      rel="icon"
+      type="image/x-icon"
+      href="/public/src/img/favicon.ico"
+    />
     <!-- Font Google link -->
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Roboto:wght@400;700&display=swap"
       rel="stylesheet"
@@ -29,19 +43,29 @@
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
     <!-- CSS link -->
-    <link rel="stylesheet" href="./src/style/style.css" />
+    <link
+      rel="stylesheet"
+      href="./src/style/style.css"
+    />
     <title>Portfolio - Tamaya Lucas</title>
   </head>
 
   <body>
     <header>
       <div class="logoContainer">
-        <img src="src/img/logo.png" alt="Mon logo" class="logo" />
+        <img
+          src="src/img/logo.png"
+          alt="Mon logo"
+          class="logo"
+        />
       </div>
 
       <nav>
         <ul class="nav">
-          <i class="fas fa-times" id="crossIcon"></i>
+          <i
+            class="fas fa-times"
+            id="crossIcon"
+          ></i>
           <li>
             <a class="nav--item"><span class="nav--item-nb">1</span> Home</a>
           </li>
@@ -64,22 +88,34 @@
           >
             <i class="fab fa-linkedin"></i
           ></a>
-          <a href="https://github.com/LucasTamaya" target="_blank">
+          <a
+            href="https://github.com/LucasTamaya"
+            target="_blank"
+          >
             <i class="fab fa-github"></i
           ></a>
-          <a href="https://5euros.com/profil/lucas-tamaya" target="_blank">
+          <a
+            href="https://5euros.com/profil/lucas-tamaya"
+            target="_blank"
+          >
             <i class="fas fa-laptop-code"></i>
           </a>
         </div>
       </nav>
 
-      <i class="fas fa-bars" id="hamburgerMenu"></i>
+      <i
+        class="fas fa-bars"
+        id="hamburgerMenu"
+      ></i>
     </header>
 
     <main>
       <!-- Section Presentation -->
       <section>
-        <div class="mainContainer" id="presentationSection">
+        <div
+          class="mainContainer"
+          id="presentationSection"
+        >
           <h2 class="section--title"><span>01.</span> Home</h2>
           <p class="presentation--hello">Bonjour, moi c'est</p>
 
@@ -90,13 +126,21 @@
             général.
           </p>
 
-          <button class="btn--cta" id="btn--contact">Contact</button>
+          <button
+            class="btn--cta"
+            id="btn--contact"
+          >
+            Contact
+          </button>
         </div>
       </section>
 
       <!-- Section About -->
       <section>
-        <div class="mainContainer" id="aboutSection">
+        <div
+          class="mainContainer"
+          id="aboutSection"
+        >
           <div class="about">
             <div class="about--info">
               <h2 class="section--title"><span>02.</span> About</h2>
@@ -330,7 +374,10 @@
                       <i class="fab fa-github"></i>
                     </a>
                   </div>
-                  <a href="./mobile-app.html" target="_blank">
+                  <a
+                    href="./mobile-app.html"
+                    target="_blank"
+                  >
                     <img
                       src="./src/img/projets/hulu-react-native.png"
                       alt="Projet Hulu React Native"
@@ -456,11 +503,45 @@
                     HTML Tailwind CSS Next JS MongoDB
                   </p>
                 </div>
+
+                <div class="swiper-slide project">
+                  <div class="project--header">
+                    <a
+                      href="https://github.com/LucasTamaya/next-js-food-app"
+                      target="_blank"
+                    >
+                      <i class="fab fa-github"></i>
+                    </a>
+                  </div>
+                  <a
+                    href="https://next-js-food-app-dmr9-lucastamaya.vercel.app/"
+                    target="_blank"
+                  >
+                    <img
+                      src="./src/img/projets/food-app.png"
+                      alt="Projet NextFoodApp"
+                      class="project--img"
+                    />
+                  </a>
+                  <h2 class="project--title">NextFoodApp</h2>
+                  <p class="project--info">
+                    Application de commande de nourriture alléchante
+                  </p>
+                  <p class="project--techno">
+                    Next JS Tailwind CSS Firebase Stripe API
+                  </p>
+                </div>
               </div>
             </div>
             <div class="swiperButton--container">
-              <i class="fas fa-arrow-left" id="swiper-button-prev"></i>
-              <i class="fas fa-arrow-right" id="swiper-button-next"></i>
+              <i
+                class="fas fa-arrow-left"
+                id="swiper-button-prev"
+              ></i>
+              <i
+                class="fas fa-arrow-right"
+                id="swiper-button-next"
+              ></i>
             </div>
           </div>
         </div>
@@ -468,7 +549,10 @@
 
       <!-- Section Contact -->
       <section>
-        <div class="mainContainer" id="contactSection">
+        <div
+          class="mainContainer"
+          id="contactSection"
+        >
           <div class="contact">
             <h2 class="section--title"><span>04.</span> Contact</h2>
 
@@ -510,7 +594,11 @@
                 name="_next"
                 value="https://portfolio3-0-lucastamaya.vercel.app/thanks.html"
               />
-              <button type="submit" class="form--btn disable" id="btn">
+              <button
+                type="submit"
+                class="form--btn disable"
+                id="btn"
+              >
                 Envoyer
               </button>
             </form>
@@ -521,8 +609,14 @@
       <!-- Footer -->
       <footer>
         <div class="footer--container">
-          <img src="src/img/logo.png" alt="Mon logo" class="logo--footer" />
-          <a href="mentions-légales.html" class="footer--legal"
+          <img
+            src="src/img/logo.png"
+            alt="Mon logo"
+            class="logo--footer"
+          />
+          <a
+            href="mentions-légales.html"
+            class="footer--legal"
             >Mentions Légales</a
           >
           <div class="footer--links">
@@ -532,10 +626,16 @@
             >
               <i class="fab fa-linkedin"></i
             ></a>
-            <a href="https://github.com/LucasTamaya" target="_blank">
+            <a
+              href="https://github.com/LucasTamaya"
+              target="_blank"
+            >
               <i class="fab fa-github"></i
             ></a>
-            <a href="https://5euros.com/profil/lucas-tamaya" target="_blank">
+            <a
+              href="https://5euros.com/profil/lucas-tamaya"
+              target="_blank"
+            >
               <i class="fas fa-laptop-code"></i>
             </a>
           </div>
@@ -551,11 +651,17 @@
           <div class="pulse"></div>
           <i class="fab fa-linkedin"></i
         ></a>
-        <a href="https://github.com/LucasTamaya" target="_blank">
+        <a
+          href="https://github.com/LucasTamaya"
+          target="_blank"
+        >
           <div class="pulse"></div>
           <i class="fab fa-github"></i
         ></a>
-        <a href="https://5euros.com/profil/lucas-tamaya" target="_blank">
+        <a
+          href="https://5euros.com/profil/lucas-tamaya"
+          target="_blank"
+        >
           <div class="pulse"></div>
           <i class="fas fa-laptop-code"></i>
         </a>
