Maj SEO performance

--- a/public/index.html
+++ b/public/index.html
@@ -7,9 +7,13 @@
       content="IE=edge"
     />
     <meta
+      name="description"
+      content="Développeur fullstack React JS, je me forme en autodidacte depuis bientôt 3 ans. Actuellement en formation à l'IFR. N'hésitez pas à me contacter !"
+    />
+    <meta
       name="viewport"
       content="width=device-width, initial-scale=1.0,
-    maximum-scale=1.0,user-scalable=0"
+      maximum-scale=2.0"
     />
     <link
       rel="icon"
@@ -47,7 +51,7 @@
       rel="stylesheet"
       href="./src/style/style.css"
     />
-    <title>Portfolio - Tamaya Lucas</title>
+    <title>Tamaya Lucas - Portfolio</title>
   </head>
 
   <body>
