--- a/public/thanks.html
+++ b/public/thanks.html
@@ -2,10 +2,28 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="description"
+      content="Développeur fullstack React JS, je me forme en autodidacte depuis bientôt 3 ans. Actuellement en formation à l'IFR. N'hésitez pas à me contacter !"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,
+  maximum-scale=2.0"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
       rel="stylesheet"
@@ -14,8 +32,11 @@
       src="https://kit.fontawesome.com/d19de467c5.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./src/style/style.css" />
-    <title>Portfolio - Tamaya Lucas</title>
+    <link
+      rel="stylesheet"
+      href="./src/style/style.css"
+    />
+    <title>Tamaya Lucas - Thanks Page</title>
   </head>
   <body>
     <main>
@@ -25,7 +46,11 @@
           <p class="presentation--info">
             Je vous répondrai dans les plus bref délais
           </p>
-          <a href="index.html" class="btn--cta">Revenir à mon portfolio</a>
+          <a
+            href="index.html"
+            class="btn--cta"
+            >Revenir à mon portfolio</a
+          >
         </div>
       </section>
 
@@ -38,11 +63,17 @@
           <div class="pulse"></div>
           <i class="fab fa-linkedin"></i
         ></a>
-        <a href="https://github.com/LucasTamaya" target="_blank">
+        <a
+          href="https://github.com/LucasTamaya"
+          target="_blank"
+        >
           <div class="pulse"></div>
           <i class="fab fa-github"></i
         ></a>
-        <a href="https://5euros.com/profil/lucas-tamaya" target="_blank">
+        <a
+          href="https://5euros.com/profil/lucas-tamaya"
+          target="_blank"
+        >
           <div class="pulse"></div>
           <i class="fas fa-briefcase"></i
         ></a>
