--- a/public/mentions-légales.html
+++ b/public/mentions-légales.html
@@ -2,10 +2,28 @@
 <html lang="fr">
   <head>
     <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <meta
+      http-equiv="X-UA-Compatible"
+      content="IE=edge"
+    />
+    <meta
+      name="description"
+      content="Développeur fullstack React JS, je me forme en autodidacte depuis bientôt 3 ans. Actuellement en formation à l'IFR. N'hésitez pas à me contacter !"
+    />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0,
+    maximum-scale=2.0"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.googleapis.com"
+    />
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin
+    />
     <link
       href="https://fonts.googleapis.com/css2?family=Abril+Fatface&display=swap"
       rel="stylesheet"
@@ -14,12 +32,17 @@
       src="https://kit.fontawesome.com/d19de467c5.js"
       crossorigin="anonymous"
     ></script>
-    <link rel="stylesheet" href="./src/style/style.css" />
-    <title>Portfolio - Tamaya Lucas</title>
+    <link
+      rel="stylesheet"
+      href="./src/style/style.css"
+    />
+    <title>Tamaya Lucas - Mentions Légales</title>
   </head>
   <body>
     <main class="legalContainer">
-      <a href="index.html" class="btn--cta legal--btn"
+      <a
+        href="index.html"
+        class="btn--cta legal--btn"
         ><i class="fas fa-hand-point-left"></i> Portfolio</a
       >
       <h1 class="legal--title">Mentions Légales</h1>
